# TypeScript-Rust-Compiler

./: .gitignore  LICENSE  README.md
compiled_output/reports/: compilation_report.json  corpus_bb_1.json  corpus_bb_2.json  corpus_bb_3.json  corpus_report.json  corpus_report_10.json  corpus_report_12.json  corpus_report_500.json  corpus_report_500_after_arrowfix.json  corpus_report_500_after_as_and_import_star.json  corpus_report_500_after_async_generics_and_computed_destructure.json  corpus_report_500_after_bitwise_ops.json  corpus_report_500_after_break_final_member_access.json  corpus_report_500_after_catch_param_types.json  corpus_report_500_after_class_modifiers.json  corpus_report_500_after_context_keywords.json  corpus_report_500_after_delete_generics_shift_fix.json  corpus_report_500_after_for_await_union_class_pow_typeof.json  (+33 more)
tsc-rust/: --output  .gitignore  Cargo.toml  README.md  monitor_scan.ps1  personality_test_user.json  personality_test_user_trust_system.json  test.js  test10.ts  test11.ts  test12.ts  test2.js  test3.js  test4.js  test4.ts  test5.js  test5.ts  test6.js  test6.ts  test7.js  test7.ts  test8.js  test8.ts  test9.js  test9.ts  test_batch.ps1  test_batch.sh  test_final.js  test_final.ts  test_generic.ts  test_generic2.js  test_generic2.ts  test_simple.js
tsc-rust/src/: ast.rs  checker.rs  compiler.rs  emitter.rs  error.rs  lexer.rs  main.rs  parser.rs  tokens.rs
tsc-rust/src-tauri/: Cargo.toml  main.rs  tauri.conf.json
tsc-rust/validation/java_samples/: ForLoop.java  MinimalFor.java  Test.java  TestFor.java  Variables.java
