[package]
name = "tsc-rust"
version = "2.0.0"
edition = "2021"
description = "TypeScript compiler in Rust"
authors = ["RYIUK"]
license = "MIT"

[[bin]]
name = "tsc-rust"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5"
